# lista-estruturas-lineares

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  manual.txt
include/lista-teorica-estruturas-lineares/: 01-a.hpp  01-b.hpp  01-c.hpp  02.hpp  03.hpp  04-a.hpp  04-b.hpp  04-c.hpp  05-a.hpp  05.hpp  06.hpp  DequeTAD.hpp  FilaTAD.hpp  PilhaTAD.hpp
src/: main.cpp
