cmake_minimum_required(VERSION 3.22)
project(lista01-project LANGUAGES CXX VERSION 0.0.1)
set (CMAKE_CXX_STANDARD 20)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
Include(FetchContent)
FetchContent_Declare(fmt GIT_REPOSITORY https://github.com/fmtlib/fmt.git GIT_TAG 9.1.0)
FetchContent_MakeAvailable(fmt)
add_library(lista01 INTERFACE)
target_include_directories(lista01 INTERFACE include/)
target_link_libraries(lista01 INTERFACE fmt)
add_executable(aplicacao src/main.cpp)
target_link_libraries(aplicacao PRIVATE lista01 fmt)
